--- a/flask_admin/templates/bootstrap2/admin/base.html
+++ b/flask_admin/templates/bootstrap2/admin/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% block title %}{% if admin_view.category %}{{ admin_view.category }} - {% endif %}{{ admin_view.name }} - {{ admin_view.admin.name }}{% endblock %}</title>
+    <title>{% block title %}{% if admin_view.category %}[[ admin_view.category ]] - {% endif %}[[ admin_view.name ]] - [[ admin_view.admin.name ]]{% endblock %}</title>
     {% block head_meta %}
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,12 +12,12 @@
         <meta name="author" content="">
     {% endblock %}
     {% block head_css %}
-        <link href="{{ admin_static.url(filename='bootstrap/bootstrap2/swatch/{swatch}/bootstrap.min.css'.format(swatch=config.get('FLASK_ADMIN_SWATCH', 'default')), v='2.3.2') }}" rel="stylesheet">
-        <link href="{{ admin_static.url(filename='bootstrap/bootstrap2/css/bootstrap-responsive.css', v='2.3.2') }}" rel="stylesheet">
-        <link href="{{ admin_static.url(filename='admin/css/bootstrap2/admin.css', v='1.1.1') }}" rel="stylesheet">
+        <link href="[[ admin_static.url(filename='bootstrap/bootstrap2/swatch/{swatch}/bootstrap.min.css'.format(swatch=config.get('FLASK_ADMIN_SWATCH', 'default')), v='2.3.2') ]]" rel="stylesheet">
+        <link href="[[ admin_static.url(filename='bootstrap/bootstrap2/css/bootstrap-responsive.css', v='2.3.2') ]]" rel="stylesheet">
+        <link href="[[ admin_static.url(filename='admin/css/bootstrap2/admin.css', v='1.1.1') ]]" rel="stylesheet">
         {% if admin_view.extra_css %}
           {% for css_url in admin_view.extra_css %}
-            <link href="{{ css_url }}" rel="stylesheet">
+            <link href="[[ css_url ]]" rel="stylesheet">
           {% endfor %}
         {% endif %}
         <style>
@@ -37,16 +37,16 @@
       <div class="navbar">
         <div class="navbar-inner">
           {% block brand %}
-          <a class="brand" href="{{ admin_view.admin.url }}">{{ admin_view.admin.name }}</a>
+          <a class="brand" href="[[ admin_view.admin.url ]]">[[ admin_view.admin.name ]]</a>
           {% endblock %}
           {% block main_menu %}
           <ul class="nav">
-            {{ layout.menu() }}
+            [[ layout.menu() ]]
           </ul>
           {% endblock %}
           {% block menu_links %}
           <ul class="nav pull-right">
-            {{ layout.menu_links() }}
+            [[ layout.menu_links() ]]
           </ul>
           {% endblock %}
           {% block access_control %}
@@ -55,7 +55,7 @@
       </div>
 
       {% block messages %}
-      {{ layout.messages() }}
+      [[ layout.messages() ]]
       {% endblock %}
 
       {# store the jinja2 context for form_rules rendering logic #}
@@ -66,13 +66,13 @@
     {% endblock %}
 
     {% block tail_js %}
-    <script src="{{ admin_static.url(filename='vendor/jquery.min.js', v='3.3.1') }}" type="text/javascript"></script>
-    <script src="{{ admin_static.url(filename='bootstrap/bootstrap2/js/bootstrap.min.js', v='2.3.2') }}" type="text/javascript"></script>
-    <script src="{{ admin_static.url(filename='vendor/moment.min.js', v='2.22.2') }}" type="text/javascript"></script>
-    <script src="{{ admin_static.url(filename='vendor/select2/select2.min.js', v='3.5.2') }}" type="text/javascript"></script>
+    <script src="[[ admin_static.url(filename='vendor/jquery.min.js', v='3.3.1') ]]" type="text/javascript"></script>
+    <script src="[[ admin_static.url(filename='bootstrap/bootstrap2/js/bootstrap.min.js', v='2.3.2') ]]" type="text/javascript"></script>
+    <script src="[[ admin_static.url(filename='vendor/moment.min.js', v='2.22.2') ]]" type="text/javascript"></script>
+    <script src="[[ admin_static.url(filename='vendor/select2/select2.min.js', v='3.5.2') ]]" type="text/javascript"></script>
     {% if admin_view.extra_js %}
       {% for js_url in admin_view.extra_js %}
-        <script src="{{ js_url }}" type="text/javascript"></script>
+        <script src="[[ js_url ]]" type="text/javascript"></script>
       {% endfor %}
     {% endif %}
     {% endblock %}
