--- a/flask_admin/templates/bootstrap2/admin/model/details.html
+++ b/flask_admin/templates/bootstrap2/admin/model/details.html
@@ -5,20 +5,20 @@
   {% block navlinks %}
   <ul class="nav nav-tabs">
     <li>
-        <a href="{{ return_url }}">{{ _gettext('List') }}</a>
+        <a href="[[ return_url ]]">[[ _gettext('List') ]]</a>
     </li>
     {%- if admin_view.can_create -%}
     <li>
-        <a href="{{ get_url('.create_view', url=return_url) }}">{{ _gettext('Create') }}</a>
+        <a href="[[ get_url('.create_view', url=return_url) ]]">[[ _gettext('Create') ]]</a>
     </li>
     {%- endif -%}
     {%- if admin_view.can_edit -%}
     <li>
-        <a href="{{ get_url('.edit_view', id=request.args.get('id'), url=return_url) }}">{{ _gettext('Edit') }}</a>
+        <a href="[[ get_url('.edit_view', id=request.args.get('id'), url=return_url) ]]">[[ _gettext('Edit') ]]</a>
     </li>
     {%- endif -%}
     <li class="active">
-        <a href="javascript:void(0)">{{ _gettext('Details') }}</a>
+        <a href="javascript:void(0)">[[ _gettext('Details') ]]</a>
     </li>
   </ul>
   {% endblock %}
@@ -26,7 +26,7 @@
   {% block details_search %}
     <div class="row-fluid">
       <div class="input-prepend fa_filter_container">
-        <span class="add-on">{{ _gettext('Filter') }}</span>
+        <span class="add-on">[[ _gettext('Filter') ]]</span>
         <input id="fa_filter" id="prependedInput" type="text">
       </div>
     </div>
@@ -37,10 +37,10 @@
     {% for c, name in details_columns %}
       <tr>
         <td>
-          <b>{{ name }}</b>
+          <b>[[ name ]]</b>
         </td>
         <td>
-        {{ get_value(model, c) }}
+        [[ get_value(model, c) ]]
         </td>
       </tr>
     {% endfor %}
@@ -49,6 +49,6 @@
 {% endblock %}
 
 {% block tail %}
-  {{ super() }}
-  <script src="{{ admin_static.url(filename='admin/js/details_filter.js', v='1.0.0') }}"></script>
+  [[ super() ]]
+  <script src="[[ admin_static.url(filename='admin/js/details_filter.js', v='1.0.0') ]]"></script>
 {% endblock %}
