--- a/flask_admin/templates/bootstrap2/admin/model/modals/create.html
+++ b/flask_admin/templates/bootstrap2/admin/model/modals/create.html
@@ -7,19 +7,19 @@
 {% block body %}
   {# "save and add" button is removed from modal (it won't function properly) #}
   {% block create_form %}
-    {{ lib.render_form(form, return_url, extra=None, form_opts=form_opts,
+    [[ lib.render_form(form, return_url, extra=None, form_opts=form_opts,
                        action=url_for('.create_view', url=return_url),
-                       is_modal=True) }}
+                       is_modal=True) ]]
   {% endblock %}
 {% endblock %}
 
 {% block tail %}
-  <script src="{{ admin_static.url(filename='admin/js/bs2_modal.js', v='1.0.0') }}"></script>
+  <script src="[[ admin_static.url(filename='admin/js/bs2_modal.js', v='1.0.0') ]]"></script>
 
   <script>
   // fill the header of modal dynamically
   $('.modal-header h3').html('{% block header_text -%}
-    <h3>{{ _gettext('Create New Record') }}</h3>
+    <h3>[[ _gettext('Create New Record') ]]</h3>
   {%- endblock %}');
   </script>
 {% endblock %}
