--- a/flask_admin/templates/bootstrap2/admin/model/modals/details.html
+++ b/flask_admin/templates/bootstrap2/admin/model/modals/details.html
@@ -5,7 +5,7 @@
   {% block details_search %}
     <div class="row-fluid">
       <div class="input-prepend fa_filter_container">
-        <span class="add-on">{{ _gettext('Filter') }}</span>
+        <span class="add-on">[[ _gettext('Filter') ]]</span>
         <input id="fa_filter" id="prependedInput" type="text">
       </div>
     </div>
@@ -16,10 +16,10 @@
     {% for c, name in details_columns %}
       <tr>
         <td>
-          <b>{{ name }}</b>
+          <b>[[ name ]]</b>
         </td>
         <td>
-        {{ get_value(model, c) }}
+        [[ get_value(model, c) ]]
         </td>
       </tr>
     {% endfor %}
@@ -28,13 +28,13 @@
 {% endblock %}
 
 {% block tail %}
-  <script src="{{ admin_static.url(filename='admin/js/details_filter.js', v='1.0.0') }}"></script>
-  <script src="{{ admin_static.url(filename='admin/js/bs2_modal.js', v='1.0.0') }}"></script>
+  <script src="[[ admin_static.url(filename='admin/js/details_filter.js', v='1.0.0') ]]"></script>
+  <script src="[[ admin_static.url(filename='admin/js/bs2_modal.js', v='1.0.0') ]]"></script>
 
   <script>
   // fill the header of modal dynamically
   $('.modal-header h3').html('{% block header_text -%}
-    {{ _gettext('View Record') + ' #' + request.args.get('id') }}
+    [[ _gettext('View Record') + ' #' + request.args.get('id') ]]
   {%- endblock %}');
   </script>
 {% endblock %}
