--- a/flask_admin/templates/bootstrap2/admin/model/modals/edit.html
+++ b/flask_admin/templates/bootstrap2/admin/model/modals/edit.html
@@ -7,19 +7,19 @@
 {% block body %}
   {# "save and continue" button is removed from modal (it won't function properly) #}
   {% block edit_form %}
-    {{ lib.render_form(form, return_url, extra=None, form_opts=form_opts,
+    [[ lib.render_form(form, return_url, extra=None, form_opts=form_opts,
                        action=url_for('.edit_view', id=request.args.get('id'), url=return_url),
-                       is_modal=True) }}
+                       is_modal=True) ]]
   {% endblock %}
 {% endblock %}
 
 {% block tail %}
-  <script src="{{ admin_static.url(filename='admin/js/bs2_modal.js', v='1.0.0') }}"></script>
+  <script src="[[ admin_static.url(filename='admin/js/bs2_modal.js', v='1.0.0') ]]"></script>
 
   <script>
   // fill the header of modal dynamically
   $('.modal-header h3').html('{% block header_text -%}
-    {{ _gettext('Edit Record') + ' #' + request.args.get('id') }}
+    [[ _gettext('Edit Record') + ' #' + request.args.get('id') ]]
   {%- endblock %}');
   </script>
 {% endblock %}
