--- a/flask_admin/templates/bootstrap2/admin/rediscli/console.html
+++ b/flask_admin/templates/bootstrap2/admin/rediscli/console.html
@@ -3,8 +3,8 @@
 {% import 'admin/static.html' as admin_static with context%}
 
 {% block head %}
-    {{ super() }}
-    <link href="{{ admin_static.url(filename='admin/css/bootstrap2/rediscli.css', v='1.0.0') }}" rel="stylesheet">
+    [[ super() ]]
+    <link href="[[ admin_static.url(filename='admin/css/bootstrap2/rediscli.css', v='1.0.0') ]]" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
@@ -20,8 +20,8 @@
 {% endblock %}
 
 {% block tail %}
-  {{ super() }}
+  [[ super() ]]
 
-  <div id="execute-view-data" style="display:none;">{{ admin_view.get_url('.execute_view')|tojson|safe }}</div>
-  <script src="{{ admin_static.url(filename='admin/js/rediscli.js', v='1.0.0') }}"></script>
+  <div id="execute-view-data" style="display:none;">[[ admin_view.get_url('.execute_view')|tojson|safe ]]</div>
+  <script src="[[ admin_static.url(filename='admin/js/rediscli.js', v='1.0.0') ]]"></script>
 {% endblock %}
