--- a/flask_admin/templates/bootstrap3/admin/layout.html
+++ b/flask_admin/templates/bootstrap3/admin/layout.html
@@ -3,13 +3,13 @@
 {%- if icon_type %}
   {% set icon_value = item.get_icon_value() %}
   {% if icon_type == 'glyph' %}
-    <i class="glyphicon {{ icon_value }}"></i>
+    <i class="glyphicon [[ icon_value ]]"></i>
   {% elif icon_type == 'fa' %}
-    <i class="fa {{ icon_value }}"></i>
+    <i class="fa [[ icon_value ]]"></i>
   {% elif icon_type == 'image' %}
-    <img src="{{ url_for('static', filename=icon_value) }}" alt="menu image">
+    <img src="[[ url_for('static', filename=icon_value) ]]" alt="menu image">
   {% elif icon_type == 'image-url' %}
-    <img src="{{ icon_value }}" alt="menu image">
+    <img src="[[ icon_value ]]" alt="menu image">
   {% endif %}
 {% endif %}
 {%- endmacro %}
@@ -22,13 +22,13 @@
       {%- if children %}
         {% set class_name = item.get_class_name() or '' %}
         {%- if item.is_active(admin_view) %}
-        <li class="active dropdown{% if class_name %} {{class_name}}{% endif %}">
+        <li class="active dropdown{% if class_name %} [[class_name]]{% endif %}">
         {% else -%}
-        <li class="dropdown{% if class_name %} {{class_name}}{% endif %}">
+        <li class="dropdown{% if class_name %} [[class_name]]{% endif %}">
         {%- endif %}
           <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
-            {% if item.class_name %}<span class="{{ item.class_name }}"></span> {% endif %}
-            {{ menu_icon(item) }}{{ item.name }}
+            {% if item.class_name %}<span class="[[ item.class_name ]]"></span> {% endif %}
+            [[ menu_icon(item) ]][[ item.name ]]
             {%- if 'dropdown-submenu' in class_name -%}
             <i class="glyphicon glyphicon-chevron-right small"></i>
             {%- else -%}
@@ -38,17 +38,17 @@
           <ul class="dropdown-menu">
           {%- for child in children -%}
             {%- if child.is_category() -%}
-              {{ menu(menu_root=[child]) }}
+              [[ menu(menu_root=[child]) ]]
             {% else %}
               {% set class_name = child.get_class_name() %}
               {%- if child.is_active(admin_view) %}
-              <li class="active{% if class_name %} {{class_name}}{% endif %}">
+              <li class="active{% if class_name %} [[class_name]]{% endif %}">
               {% else %}
-              <li{% if class_name %} class="{{class_name}}"{% endif %}>
+              <li{% if class_name %} class="[[class_name]]"{% endif %}>
               {%- endif %}
-              <a href="{{ child.get_url() }}"{% if child.target %}
-               target="{{ child.target }}"{% endif %}>
-              {{ menu_icon(child) }}{{ child.name }}</a>
+              <a href="[[ child.get_url() ]]"{% if child.target %}
+               target="[[ child.target ]]"{% endif %}>
+              [[ menu_icon(child) ]][[ child.name ]]</a>
               </li>
             {%- endif %}
           {%- endfor %}
@@ -59,11 +59,11 @@
       {%- if item.is_accessible() and item.is_visible() -%}
         {% set class_name = item.get_class_name() %}
         {%- if item.is_active(admin_view) %}
-        <li class="active{% if class_name %} {{class_name}}{% endif %}">
+        <li class="active{% if class_name %} [[class_name]]{% endif %}">
         {%- else %}
-        <li{% if class_name %} class="{{class_name}}"{% endif %}>
+        <li{% if class_name %} class="[[class_name]]"{% endif %}>
         {%- endif %}
-          <a href="{{ item.get_url() }}"{% if item.target %} target="{{ item.target }}"{% endif %}>{{ menu_icon(item) }}{{ item.name }}</a>
+          <a href="[[ item.get_url() ]]"{% if item.target %} target="[[ item.target ]]"{% endif %}>[[ menu_icon(item) ]][[ item.name ]]</a>
         </li>
       {%- endif -%}
     {% endif -%}
@@ -75,8 +75,8 @@
   {% for item in links %}
     {% set class_name = item.get_class_name() %}
     {% if item.is_accessible() and item.is_visible() %}
-      <li{% if class_name %} class="{{ class_name }}"{% endif %}>
-        <a href="{{ item.get_url() }}">{{ menu_icon(item) }}{{ item.name }}</a>
+      <li{% if class_name %} class="[[ class_name ]]"{% endif %}>
+        <a href="[[ item.get_url() ]]">[[ menu_icon(item) ]][[ item.name ]]</a>
       </li>
     {% endif %}
   {% endfor %}
@@ -89,12 +89,12 @@
         {% if category %}
         {# alert-error changed to alert-danger in bootstrap 3, mapping is for backwards compatibility #}
         {% set mapping = {'message': 'info', 'error': 'danger'} %}
-        <div class="alert alert-{{ mapping.get(category, category) }} alert-dismissable">
+        <div class="alert alert-[[ mapping.get(category, category) ]] alert-dismissable">
         {% else %}
         <div class="alert alert-dismissable">
         {% endif %}
           <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          {{ m }}
+          [[ m ]]
         </div>
       {% endfor %}
     {% endif %}
