--- a/flask_admin/templates/bootstrap3/admin/model/modals/details.html
+++ b/flask_admin/templates/bootstrap3/admin/model/modals/details.html
@@ -5,14 +5,14 @@
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     {% block header_text %}
-      <h3>{{ _gettext('View Record') + ' #' + request.args.get('id') }}</h3>
+      <h3>[[ _gettext('View Record') + ' #' + request.args.get('id') ]]</h3>
     {% endblock %}
   </div>
 
   <div class="modal-body">
   {% block details_search %}
     <div class="input-group fa_filter_container col-lg-6">
-      <span class="input-group-addon">{{ _gettext('Filter') }}</span>
+      <span class="input-group-addon">[[ _gettext('Filter') ]]</span>
       <input id="fa_filter" type="text" class="form-control">
     </div>
   {% endblock %}
@@ -22,10 +22,10 @@
     {% for c, name in details_columns %}
       <tr>
         <td>
-          <b>{{ name }}</b>
+          <b>[[ name ]]</b>
         </td>
         <td>
-        {{ get_value(model, c) }}
+        [[ get_value(model, c) ]]
         </td>
       </tr>
     {% endfor %}
@@ -35,6 +35,6 @@
 {% endblock %}
 
 {% block tail %}
-  <script src="{{ admin_static.url(filename='admin/js/details_filter.js', v='1.0.0') }}"></script>
-  <script src="{{ admin_static.url(filename='admin/js/bs3_modal.js', v='1.0.0') }}"></script>
+  <script src="[[ admin_static.url(filename='admin/js/details_filter.js', v='1.0.0') ]]"></script>
+  <script src="[[ admin_static.url(filename='admin/js/bs3_modal.js', v='1.0.0') ]]"></script>
 {% endblock %}
